--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: backend
     ports:
       - "8000:8000"
+    environment:
+      - CORS_ORIGINS=http://localhost:3000
     networks:
       - app-network
 
