--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.2",
     "js-cookie": "^3.0.5",
