--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: ./backend
     container_name: backend
     ports:
-      - "8000:8000"
-    environment:
-      - CORS_ORIGINS=http://localhost:3000
+      - "8080:8080"
+    env_file:
+      - ./backend/.env
     networks:
       - app-network
 
@@ -18,10 +18,10 @@ services:
     container_name: frontend
     ports:
       - "3000:3000"
+    env_file:
+      - ./frontend/.env
     depends_on:
       - backend
-    environment:
-      - REACT_APP_BACKEND_URL=http://backend:8000
     networks:
       - app-network
 
