--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -11,7 +11,7 @@ spec:
         - containerPort: 8080
         env:
         - name: CORS_ORIGINS
-          value: "https://platematch-frontend-403018061895.europe-west1.run.app"  
+          value: "https://a51m.xyz"
         - name: HOST
           value: "0.0.0.0"
         resources:
