--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,22 @@ services:
   backend:
     build:
       context: ./backend
-    container_name: backend
-    ports:
-      - "8080:8080"
+    container_name: platematch-backend
     env_file:
       - ./backend/.env
+    ports:
+      - "8080:8080"
     networks:
       - app-network
 
   frontend:
     build:
       context: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
+    container_name: platematch-frontend
     env_file:
       - ./frontend/.env
+    ports:
+      - "3000:3000"
     depends_on:
       - backend
     networks:
