--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,14 @@
-fastapi
-uvicorn
+fastapi==0.105.0
+uvicorn==0.24.0
 pandas
 fuzzywuzzy
-httpx
-beautifulsoup4
+httpx==0.25.2
+beautifulsoup4==4.12.2
 python-Levenshtein
-python-multipart
+python-multipart==0.0.6
 openpyxl
 python-dotenv==1.0.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+
