--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,15 +6,19 @@ WORKDIR /app
 
 # Copy package.json and package-lock.json into the container
 COPY package*.json ./
+
 # Install any needed packages
 RUN npm install
 
 # Copy the current directory contents into the container at /app
 COPY . .
 
-# Add build argument for backend URL with default for local development
+# Add build argument for backend URL
 ARG NEXT_PUBLIC_BACKEND_URL
 ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
+
+# Log the value for debugging
+RUN echo "Building with NEXT_PUBLIC_BACKEND_URL=$NEXT_PUBLIC_BACKEND_URL"
 
 # Build the app
 RUN npm run build
